# BioDac-speeding-up-chemistry-simulations

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: .pages  index.md  system_architecture.md
docs/contribution/: benjamin.md
docs/documentation/: research.md  technical_documentation.md  user_manual.md
docs/reflection/: bas_van_der_laan.md
mdocotion/assets/stylesheets/: mdocotion.css
src/: .env-example
src/julia/: JuliaVQE.ipynb
src/pennylane/: pennylane_vqe.ipynb
src/qiskit/: ibm_vqe.ipynb  qiskit_manual_vqe.ipynb  qiskit_manual_vqe.py  qiskit_nature_evaluation.py  qiskit_nature_excited_state_vqe.ipynb  qiskit_nature_ground_state_vqe.ipynb  qiskit_quantum_inspire.ipynb  qiskit_quantum_inspire.py  qiskit_quantum_inspire_ibm.py
src/qiskit/evaluation/: evaluation_summary.py  manual_vqe.py  pc_usage.py  results.py  vqe_evaluation.py
src/qiskit/evaluation/hydrogen_system/: hydrogen_system.py
