[tool.poetry]
name = "biodac-speeding-up-chemistry-simulations"
version = "0.1.0"
description = "Doing chemistry simulations using quantum computing"
authors = ["Benjamin Burghouwt <benjamin.burghouwt@hva.nl>"]
license = "CC0 1.0 DEED"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
qiskit = "1.0.2"
jupyter = "1.0.0"
qiskit-nature = "0.7.2"
pyscf = "2.5.0"
matplotlib = "3.8.4"
tqdm = "4.66.4"
qiskit-aer = "^0.14.1"
pylatexenc = "^2.10"
pdflatex = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
